styled profile-page entry-view

--- a/style/style.css
+++ b/style/style.css
@@ -335,12 +335,16 @@ html, body {
   padding-left: 50px;
   padding-top: 30px;
   overflow-y: scroll;
-  background-color: white;
+  background-color: #fafafa;
   border-right: 1px solid #f1f1f1
 }
 
 #entry-view .glyphicon {
   margin-right: 10px;
+}
+
+#entry-view .entry-view-selector {
+  margin-bottom: 20px;
 }
 
 #entry-view .entry-view-selector .glyphicon {
@@ -359,7 +363,7 @@ html, body {
   margin-top: 30px;
 }
 
-/*Single Entry View*/
+/* Single Entry View */
 #single-entry-view {
   height: 100vh;
   overflow-y: scroll;
@@ -427,6 +431,7 @@ html, body {
   margin-top: -40px;
   text-align: left;
   display: inline;
+  padding: 15px;
 }
 
 #entry-view-detailed-list .entry-view-item .action-bar {
@@ -447,20 +452,27 @@ html, body {
   text-align: center;
 }
 
+#entry-view-detailed-list .entry {
+  background: white;
+  border: 1px solid #f1f1f1;
+  margin-bottom: 20px;
+}
+
 #entry-view-detailed-list .entry-text {
   margin-top: 30px;
   margin-bottom: 10px;
+  padding: 15px;
   font-weight: lighter;
   font-size: 12pt;
   overflow-y: hidden;
-  height: 200px;
+  height: 150px;
   position: relative;
 }
 
 #entry-view-detailed-list .entry .entry-text::after {
   content: '';
   position: absolute;
-  top: 140px;
+  top: 100px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -581,7 +593,7 @@ html, body {
   padding-bottom: 10px;
 }
 
-#entry-filter .sub-heading {
+#entry-filter .-heading {
   font-size: 10pt;
   font-weight: light;
   color: #b3b3b3;
@@ -1012,26 +1024,27 @@ input[type="checkbox"]:focus{
 /* Top Tags styles */
 #top-tags-container > #tag-list {
   display: block;
-  margin-top: 20px;
-  border: 1px solid #A9A9A9;
+  margin-top: 40px;
+}
+
+#top-tags-container .list-group-item {
+  border: none;
 }
 
 #tag-list > #top-tags-header {
   text-align: center;
 }
 
-#tag-list .list-group-item {
-  border-left: 0px;
-  border-right: 0px;
-}
-
 #tag-list > .tag-list-item {
   text-align: center;
   font-weight: bold;
+  background-color: #fafafa;
+  margin-bottom: 5px;
 }
 
-#tag-list > .tag-list-item:hover {
-  background-color: #f3f3f3;
+#tag-list > .list-group-item:hover {
+  background-color: #ffffff;
+  border: 1px solid #f1f1f1;
   cursor: pointer;
 }
 
@@ -1127,12 +1140,12 @@ input[type="checkbox"]:focus{
 
 #summary-view #stats p {
   font-size: 18px;
+  color: grey;
 }
 
 #stats > #stats-count {
   font-size: 30px;
   font-weight: bold;
-  color: grey;
 }
 
 /* Heatmap Styles */
@@ -1243,8 +1256,8 @@ input[type="checkbox"]:focus{
   text-decoration: none;
 }
 
-#recent-activity .entry-item-container:hover, #heatmap-entries .entry-item-container:hover {
-  background-color: rgba(211,211,211, 0.5);
+#recent-activity .entry-item-container:hover .entry-date, #heatmap-entries .entry-item-container:hover .entry-date {
+  color: #0EBFE9;
 }
 
 #recent-activity .entry-header, #heatmap-entries .entry-header {
@@ -1299,7 +1312,7 @@ input[type="checkbox"]:focus{
 /* LoginPage and CreateAccountPage styles */
 #login-page, #create-account-page {
   height: 100vh;
-  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+  background: #fafafa;
 }
 
 #login-form, #create-account-form {
@@ -1307,15 +1320,24 @@ input[type="checkbox"]:focus{
   top: 50%;
   transform: translateY(-50%);
   padding: 30px;
-  background-color: rgba(119, 229, 255, 0.5);
-  box-shadow: 3px 3px 5px black;
+  border: 4px solid #0EBFE9;
+}
+
+#login-page .btn, #create-account-page .btn {
+  color: black;
+  border: 2px solid #0EBFE9;
+  background: #ffffff;
+  border-radius: 0px;
+}
+
+#login-page .btn:hover, #create-account-page .btn:hover {
+  font-weight: bold;
 }
 
 #login-page .devjournal-title, #create-account-form .devjournal-title {
-  color: white;
-  font-family: "Arial Black";
+  color: black;
   text-align: center;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 30px;
   margin-bottom: 30px;
 }
@@ -1325,11 +1347,11 @@ input[type="checkbox"]:focus{
 }
 
 #login-page .entry-field, #create-account-form .entry-field {
-  color: white;
+  color: black;
   font-weight: normal;
 }
 
 #login-page .remember-me {
-  color: white;
+  color: black;
   margin-bottom: 20px;
 }
