--- a/style/style.css
+++ b/style/style.css
@@ -453,8 +453,7 @@ html, body {
 }
 
 #entry-view-detailed-list .entry {
-  background: #fafafa;
-  border: 1px solid #f1f1f1;
+  border-top: 1px solid #f1f1f1;
   margin-bottom: 20px;
 }
 
@@ -472,7 +471,7 @@ html, body {
 #entry-view-detailed-list .entry .entry-text::after {
   content: '';
   position: absolute;
-  top: 100px;
+  top: 70px;
   bottom: 0;
   left: 0;
   right: 0;
