fixed entry scroll error

--- a/style/style.css
+++ b/style/style.css
@@ -336,7 +336,8 @@ html, body {
   padding-top: 30px;
   overflow-y: scroll;
   background-color: #ffffff;
-  border-right: 1px solid #f1f1f1
+  border-right: 1px solid #f1f1f1;
+  height: 95vh;
 }
 
 #entry-view .glyphicon {
